stitch in chimera visualizations

--- a/report/Report.tex
+++ b/report/Report.tex
@@ -157,7 +157,49 @@ Finally, we simply run this script on each candidate PDB file in order to genera
 
 \subsection{Visualization}
 
+\begin{figure}
+\centering
 
+\begin{minipage}{.50\textwidth}
+  \centering
+  \includegraphics[width=.9\linewidth]{t50_initial}
+  \captionof{figure}{T50 Initial}
+  \label{fig:test1}
+
+  \centering
+  \includegraphics[width=.9\linewidth]{t50_native}
+  \captionof{figure}{T50 Native}
+  \label{fig:test2}
+
+  \centering
+  \includegraphics[width=.9\linewidth]{t50_decoy}
+  \captionof{figure}{T50 Decoy}
+  \label{fig:test2}
+\end{minipage}
+
+\end{figure}
+
+\begin{figure}
+\centering
+
+\begin{minipage}{.50\textwidth}
+  \centering
+  \includegraphics[width=.9\linewidth]{t53_initial}
+  \captionof{figure}{T53 Initial}
+  \label{fig:test1}
+
+  \centering
+  \includegraphics[width=.9\linewidth]{t53_native}
+  \captionof{figure}{T53 Native}
+  \label{fig:test2}
+
+  \centering
+  \includegraphics[width=.9\linewidth]{t53_decoy}
+  \captionof{figure}{T53 Decoy}
+  \label{fig:test2}
+\end{minipage}
+
+\end{figure}
 
 \section{Evaluation}
 
